--- a/src/AboutMe.css
+++ b/src/AboutMe.css
@@ -1,16 +1,22 @@
 .img-container {
-  width: 150px;
-  height: auto;
-  margin: 0 auto;
+  width: 140px;
+  height: 140px;
+  margin: 0;
+  background-color: #444444;
+  border-radius: 50%;
+  padding: 2px;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
 }
 
 /* resize images */
 .img-container img {
-  width: 150px;
-  height: auto;
+  width: 140px;
+  height: 140px;
   border-radius: 50%;
+  margin: 0;
 }
-
 
 .about-me-container {
   display: inline-flex;
@@ -19,4 +25,22 @@
 
 p {
   margin: 0;
+}
+
+hr {
+  flex-grow: 1;
+  margin: auto 0;
+  height: 2px;
+  background-color: #444444;
+}
+
+.personal-photo-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.about-me-flex-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
