--- a/src/OutsideLinks.css
+++ b/src/OutsideLinks.css
@@ -1,12 +1,13 @@
-.footer {
+.social-links-container {
+  margin-top: 40px;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: right;
   align-content: center;
 }
 
-.footer-link {
-  margin: 20px 20px;
+.social-link {
+  margin: 10px 0;
   height: 30px;
   width: 30px;
 }
